--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,15 @@
-[tool.poetry]
-name = "inter diary writer"
+[project]
+name = "idwriter"
 version = "0.1.0"
-description = ""
-authors = ["Hirusha Fernando <heshanhfernando@gmail.com>"]
+description = "Add your description here"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-openpyxl = "^3.1.5"
-python-dotenv = "^1.0.1"
-openai = "^1.65.2"
-instructor = "^1.7.2"
-pyyaml = "^6.0.2"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.12"
+dependencies = [
+    "gradio>=5.31.0",
+    "instructor>=1.8.3",
+    "openai>=1.82.0",
+    "openpyxl>=3.1.5",
+    "pydantic>=2.11.5",
+    "python-dotenv>=1.1.0",
+    "pyyaml>=6.0.2",
+]
